[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Tapp/people.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 32 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -16.1621, 0, 0, 0, 0, 864, -18.667 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 864, -8 )
}

[node name="People" type="Node2D"]
script = ExtResource( 2 )

[node name="Barrel" type="Sprite" parent="."]
position = Vector2( 1024, 0 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BarrelArea" type="Area2D" parent="Barrel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrel/BarrelArea"]
shape = SubResource( 1 )

[node name="Bar" type="Sprite" parent="."]
position = Vector2( 0, 10.667 )
z_index = 1
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -32 )

[node name="SlidePath" type="Path2D" parent="Bar"]
curve = SubResource( 2 )

[node name="Persons" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="personsTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Barrel/BarrelArea" to="." method="_on_BarrelArea_body_entered"]
[connection signal="timeout" from="personsTimer" to="." method="_on_personsTimer_timeout"]
